Package name typo

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.rizwan.uianim]",
+  "name": "com.rizwan.uianim",
   "version": "0.1.0",
   "displayName": "Unity UI Animation",
   "description": "This package provides a way to utilize Sprite Sequences as animation for UI",
